Modified adopts to addopts

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [pytest]
-adopts = --doctest-modules -v -s --color=yes --cov-config=setup.cfg --cov-report=xml --cov-report=term-missing
+addopts = --doctest-modules -v -s --color=yes --cov-config=setup.cfg --cov-report=xml --cov-report=term-missing
 
 # pytest coverage options
 [run]
