--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
 # command to run tests
 script:
-  - coverage run --source=bingmaps setup.py test
+  - coverage run --source bingmaps setup.py test
 # commands to run setup file
 # commands to run some style (pep8, pylint) tests on
 # the package
