--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements/development.txt
+  - pip install coverage
   - pip install coveralls
 # command to run tests
 script:
