--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 # command to run tests
 script:
   - coverage run --source=bingmaps setup.py test
+  - coverage report -m
 # commands to run setup file
 # commands to run some style (pep8, pylint) tests on
 # the package
