Another iteration of getting coverage results in coveralls

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ addopts = --doctest-modules -v -s --color=yes --cov-config=setup.cfg --cov-repor
 
 # pytest coverage options
 [run]
+data_file = .coverage
 omit =
     */tests/*
     */test_*
