--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ addopts = --doctest-modules -v -s --color=yes --cov-config=setup.cfg --cov-repor
 
 # pytest coverage options
 [run]
-data_file = .coverage
+data_file = coverage.xml
 omit =
     */tests/*
     */test_*
