--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install:
   - pip install coveralls
 # command to run tests
 script:
-  - coverage run --source=bingmaps setup.py test
-  - coverage report
+  - coverage run --source=bingmaps -m pytest tests
+  - coverage report -m
 # commands to run setup file
 # commands to run some style (pep8, pylint) tests on
 # the package
