--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install:
   - sudo apt-get install python-pip
   - sudo /usr/bin/pip install -U pytest
-  - pip install -r requirements/development.txt
+  - pip install -r requirements-dev.txt
   - pip install coveralls
 # command to run tests
 script:
