Updated setup.cfg with latest pytest changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
-[pytest]
-addopts = --doctest-modules -v -s --color=yes --cov-config=setup.cfg --cov-report=xml --cov-report=term-missing
+[tool:pytest]
+addopts = --doctest-modules -v -s --color=yes --cov-config=setup.cfg --cov-report=term-missing
 
 # pytest coverage options
 [run]
